--- a/nodeServer.csproj
+++ b/nodeServer.csproj
@@ -2,6 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <OutputPath>tmp\</OutputPath>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup>
     <ProjectGuid>{7B98B214-0944-4AFE-ACBF-EF1BCDBEF366}</ProjectGuid>
